jobdetail page updated

--- a/client/src/pages/jobDetail.css
+++ b/client/src/pages/jobDetail.css
@@ -287,7 +287,7 @@
   justify-content: center;
 }
 
-.buttons_container button {
+.buttons_container a {
   max-width: 271px;
   margin-bottom: 24px;
   border-radius: 4px;
